--- a/todo_project/Dockerfile
+++ b/todo_project/Dockerfile
@@ -1,14 +1,8 @@
-# 1. Базовый образ
-FROM python:3.11-slim
-
-# 2. Устанавливаем переменные окружения, чтобы Python не буферизовал вывод
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# 3. Устанавливаем рабочую директорию
+FROM python:3.11
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+RUN apt-get update && apt-get -y dist-upgrade && apt-get install -y netcat-traditional
 WORKDIR /app
-
-# 4. Обновляем pip и устанавливаем зависимости
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 COPY . .
